# iglu_python

./: .gitignore  NOTES.md  README.md  R_REVIEW.md  iglu_r_discrepancies.ipynb  pyproject.toml  requirements-dev.txt  requirements-r.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
iglu_python/: __init__.py  above_percent.py  active_percent.py  adrr.py  auc.py  below_percent.py  cgm2daybyday.py  cogi.py  conga.py  ea1c.py  episode_calculation.py  grade.py  grade_eugly.py  grade_hyper.py  grade_hypo.py  gri.py  gvp.py  hbgi.py  hyper_index.py  hypo_index.py  igc.py  in_range_percent.py  iqr_glu.py  j_index.py  lbgi.py  m_value.py  mad_glu.py  mag.py  mage.py  mean_glu.py  median_glu.py  metrics.py  modd.py  pgs.py  process_data.py  quantile_glu.py  range_glu.py  roc.py  sd_glu.py  sd_measures.py  (+3 more)
notebooks/: auc_evaluation.ipynb  episode_calculation_evaluation.ipynb
tests/: build_expected_results.py  expected_results.json  test_CGMS2DayByDay.py  test_above_percent.py  test_active_percent.py  test_adrr.py  test_auc.py  test_below_percent.py  test_cgm2daybyday.py  test_cogi.py  test_conga.py  test_ea1c.py  test_episode_calculation.py  test_grade.py  test_grade_eugly.py  test_grade_hyper.py  test_grade_hypo.py  test_gri.py  test_gvp.py  test_hbgi.py  test_hyper_index.py  test_hypo_index.py  test_igc.py  test_in_range_percent.py  test_iqr_glu.py  test_j_index.py  test_lbgi.py  test_m_value.py  test_mad_glu.py  test_mag.py  test_mage.py  test_mean_glu.py  test_median_glu.py  test_modd.py  test_pgs.py  test_process_data.py  test_quantile_glu.py  test_range_glu.py  test_roc.py  test_sd_glu.py  (+3 more)
tests/data/: example_data_1_subject.csv  example_data_1_subject_with_days.csv  example_data_5_subject.csv  example_data_Subject_1.csv  example_data_Subject_2.csv  example_data_Subject_3.csv  example_data_Subject_4.csv  example_data_Subject_5.csv  example_meals_hall.csv  expected_results.json  simple_test_1.csv
